--- a/src/IShellFolder/IShellFolder.vcxproj
+++ b/src/IShellFolder/IShellFolder.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="LaunchDebugger.h" />
     <ClInclude Include="Logging\BigDriveTraceLogger.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RegisterClipboardFormats.h" />
     <ClInclude Include="RegistrationManager.h" />
   </ItemGroup>
   <ItemGroup>
@@ -231,6 +232,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RegisterClipboardFormats.cpp" />
     <ClCompile Include="RegistrationManager.cpp" />
   </ItemGroup>
   <ItemGroup>
