--- a/src/DTC/BigDrive.Service.csproj
+++ b/src/DTC/BigDrive.Service.csproj
@@ -84,8 +84,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyResolver.cs" />
-    <Compile Include="BigDriveConfiguration.cs" />
+    <Compile Include="BigDriveService.cs" />
     <Compile Include="BigDriveTraceSource.cs" />
+    <Compile Include="Interfaces\IBigDriveConfiguration.cs" />
+    <Compile Include="Interfaces\IBigDriveSetup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
