--- a/src/BigDrive.Service/BigDrive.Service.csproj
+++ b/src/BigDrive.Service/BigDrive.Service.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyResolver.cs" />
+    <Compile Include="BigDriveService-IBigDriveSetup.cs" />
     <Compile Include="BigDriveService.cs" />
     <Compile Include="BigDriveTraceSource.cs" />
     <Compile Include="Interfaces\IBigDriveConfiguration.cs" />
