--- a/src/BigDrive.Service/BigDrive.Service.csproj
+++ b/src/BigDrive.Service/BigDrive.Service.csproj
@@ -92,7 +92,8 @@
     <Compile Include="Interfaces\IBigDriveSetup.cs" />
     <Compile Include="Interfaces\IBigDriveProvision.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistrationHelper.cs" />
+    <Compile Include="RegistryHelper.cs" />
+    <Compile Include="ShellHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
