--- a/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
+++ b/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
@@ -192,7 +192,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\IShellFolder\IShellFolder.vcxproj">
+    <ProjectReference Include="..\..\..\src\BigDrive.ShellFolder\BigDrive.ShellFolder.vcxproj">
       <Project>{ca6d72a1-fedf-4040-8ccf-9793437dad97}</Project>
     </ProjectReference>
   </ItemGroup>
