--- a/src/BigDrive.Extension/BigDrive.Extension.vcxproj
+++ b/src/BigDrive.Extension/BigDrive.Extension.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BigDriveExtension.h" />
+    <ClInclude Include="BigDriveExtensionClassFactory.h" />
     <ClInclude Include="BigDriveTraceLogger.h" />
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="framework.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="BigDriveExtension-IShellExtInit.cpp" />
     <ClCompile Include="BigDriveExtension-IUnknown.cpp" />
     <ClCompile Include="BigDriveExtension.cpp" />
+    <ClCompile Include="BigDriveExtensionClassFactory.cpp" />
     <ClCompile Include="BigDriveTraceLogger.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="LaunchDebugger.cpp" />
