--- a/src/BigDrive.Extension/BigDrive.Extension.vcxproj
+++ b/src/BigDrive.Extension/BigDrive.Extension.vcxproj
@@ -144,11 +144,12 @@
   <ItemGroup>
     <ClInclude Include="BigDriveExtension.h" />
     <ClInclude Include="BigDriveExtensionClassFactory.h" />
-    <ClInclude Include="BigDriveTraceLogger.h" />
+    <ClInclude Include="Logging\BigDriveTraceLogger.h" />
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="LaunchDebugger.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RegistrationHelper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BigDriveExtension-IContextMenu.cpp" />
@@ -156,7 +157,7 @@
     <ClCompile Include="BigDriveExtension-IUnknown.cpp" />
     <ClCompile Include="BigDriveExtension.cpp" />
     <ClCompile Include="BigDriveExtensionClassFactory.cpp" />
-    <ClCompile Include="BigDriveTraceLogger.cpp" />
+    <ClCompile Include="Logging\BigDriveTraceLogger.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="LaunchDebugger.cpp" />
     <ClCompile Include="pch.cpp">
@@ -165,6 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RegistryHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="BigDrive.Extension.def" />
