--- a/src/BigDrive.Extension/BigDrive.Extension.rc
+++ b/src/BigDrive.Extension/BigDrive.Extension.rc
@@ -1,4 +1,5 @@
 #include <windows.h>
+#include "resource.h"
 
 IDD_BIGDRIVE_MAP_DIALOG DIALOGEX 0, 0, 200, 100
 STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
